--- a/droom/src/App.css
+++ b/droom/src/App.css
@@ -1,24 +1,9 @@
 .App {
   text-align: center;
-  background-color: grey;
+  background-color: #50BDE4;
+  border: 10px double lightgrey;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
@@ -39,7 +24,7 @@
   justify-content: space-around;
   padding:20px ;
   margin: 0px auto;
-  background-color: blue;
+  background-color: lightgrey;
 }
 
 h1 {
@@ -49,4 +34,13 @@ h1 {
 a {
   text-decoration: none;
   color: white;
+}
+
+.teamContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin: 0px auto;
+  background: linear-gradient(to bottom,#50BDE4, lightgrey);
 }
