--- a/droom/src/App.css
+++ b/droom/src/App.css
@@ -27,12 +27,81 @@
   background-color: lightgrey;
 }
 
-h1 {
+/* h1 {
   text-align: center;
+  color: white;
+  font-family: "Great Vibes", cursive;
+} */
+
+h1 {
+  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+  font-size: 65px;
+  margin: 20px auto;
+  /* padding: 5px 4px; */
+  text-align: center;
+  /* text-transform: uppercase; */
+  color: white;
 }
 
 a {
   text-decoration: none;
+  color: white;
+  font-family: "Great Vibes", cursive;
+}
+
+.homeContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0px 0px;
+  margin: 0px auto;
+  background: linear-gradient(to bottom,#50BDE4, lightgrey);
+}
+
+.homeHeader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: space-around;
+  margin: 10px 0px;
+}
+
+.homeHeader h1 {
+  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+  font-size: 50px;
+  margin: 0px auto;
+  padding: 20px 0px;
+  text-align: center;
+  color: white;
+}
+
+
+.imgContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0px auto;
+  margin-bottom: 50px;
+}
+
+.aboutContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 50px 0px;
+  margin: 0px auto;
+  background: linear-gradient(to bottom,#50BDE4, lightgrey);
+}
+
+.aboutContainer h1 {
+  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+  font-size: 65px;
+  margin: 5px auto;
+  padding: 10px 4px;
+  text-align: center;
+  text-transform: uppercase;
   color: white;
 }
 
