--- a/droom/src/App.css
+++ b/droom/src/App.css
@@ -214,18 +214,37 @@ a:hover {
   /* display: flex;
   flex-direction: row;
   justify-content: space-between; */
+  width: 30%;
+  border: 1px solid white;
+}
+
+.matchesMasterContainer {
+  width: 30%;
+  margin: 20px auto;
   border: 1px solid white;
 }
 
 .userDisplayContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  margin: 20px auto;
+  padding: 0px 20px;
   border: 1px solid white;
+  
 }
 
 .userDisplayContainer img {
+  max-width: 300px;
+  max-height: 500px;
+  width: auto;
+  height: auto;
 }
 
 .sideNavContainer {
-border: 1px solid white;
+  margin: 20px auto;
+  border: 1px solid white;
 }
 
 .messagesContainer {
