--- a/droom/src/App.css
+++ b/droom/src/App.css
@@ -240,18 +240,25 @@ a:hover {
   justify-content: space-between;
 }
 
+.jobseekerUIcontainer input{
+  display: flex;
+  text-align: center;
+  margin: 0px auto;
+  width: 50%;
+}
+
 .matchesContainer {
   /* display: flex;
   flex-direction: row;
   justify-content: space-between; */
   width: 30%;
-  border: 1px solid white;
+  border: 2px solid white;
 }
 
 .matchesMasterContainer {
   width: 30%;
   margin: 20px auto;
-  border: 1px solid white;
+  border: 2px solid white;
 }
 
 .userDisplayContainer {
@@ -261,8 +268,7 @@ a:hover {
   width: 50%;
   margin: 20px auto;
   padding: 0px 50px;
-  border: 1px solid white;
-  
+  border: 2px solid white;
 }
 
 .userNameContainer {
@@ -273,7 +279,7 @@ a:hover {
   width: 100%;
   margin: 20px auto;
   padding: 0px 20px;
-  border: 1px solid white;
+  border: 2px solid white;
   
 }
 
@@ -282,13 +288,22 @@ a:hover {
   max-height: 500px;
   width: auto;
   height: auto;
+  margin: 20px auto;
 }
 
 .sideNavContainer {
   margin: 20px auto;
-  border: 1px solid white;
+  border: 2px solid white;
 }
 
 .messagesContainer {
   color: black;
   }
+
+  .buttonsGroup {
+    display: flex;
+    justify-content: space-between;
+    margin: 40px auto;
+    width: 55%;
+  }
+  
